manifests/installation/bare/onex/onex-toyblc/deployment.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onex-toyblc # 资源标签
  name: onex-toyblc # 资源名称
spec:
  replicas: 1 # 副本数
  progressDeadlineSeconds: 10
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: onex-toyblc
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: onex-toyblc
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onex-toyblc
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --config=/opt/onex/etc/onex-toyblc.yaml
        image: ccr.ccs.tencentyun.com/onexstack/onex-toyblc-amd64:v0.1.0
        name: onex-toyblc
        ports:
        - containerPort: 6001
          name: http-6001
          protocol: TCP
        - containerPort: 56080
          name: http-56080
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 56080
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          tcpSocket:
            port: 56080
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        startupProbe:
          tcpSocket:
            port: 56080
          failureThreshold: 10
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
        imagePullPolicy: IfNotPresent
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/onex/etc/onex-toyblc.yaml
          name: onex-toyblc
          subPath: onex-toyblc.yaml
        - mountPath: /opt/onex/etc/config
          name: onex
          subPath: config
        - mountPath: /opt/onex/etc/cert
          name: onex-tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
      terminationGracePeriodSeconds: 5
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: onex-toyblc.yaml
            path: onex-toyblc.yaml
          name: onex-toyblc
        name: onex-toyblc
      - configMap:
          defaultMode: 420
          items:
          - key: config
            path: config
          name: onex
        name: onex
      - secret:
          defaultMode: 420
          secretName: onex-tls
        name: onex-tls
